# rustdesk-server-demo

./: Cargo.toml  README.md  build.rs  grpc_backend_message.txt  grpc_rendezvous.txt  xx.txt
apps/: broadcast.rs  cast1.rs  cast2.rs  consumer.rs  demo1.rs  demo10.rs  demo11.rs  demo12.rs  demo13.rs  demo14.rs  demo15.rs  demo17.rs  demo18.rs  demo19.rs  demo2.rs  demo20.rs  demo3.rs  demo4.rs  demo5.rs  demo6.rs  demo7.rs  demo8.rs  demo9.rs  echo.rs  echo1.rs  echo2.rs  forward.rs  multicast.rs  proxy-client.rs  proxy.rs  proxyclient.rs  ws-actix-client.rs  ws-actix-server.rs  ws-client.rs  ws-server.rs
libs/hbb_common/: Cargo.toml  build.rs
libs/hbb_common/protos/: message.proto  rendezvous.proto
libs/hbb_common/src/: bytes_codec.rs  lib.rs  tcp.rs  udp.rs  utils.rs
libs/hbb_common/src/protos/: message.rs  rendezvous.rs
proto/: helloworld.proto  message.proto  rendezvous.proto
src/: client.rs  lib.rs  main.rs  server.rs
src/controller/: hello.rs
