[package]
name = "rustdesk-server"
version = "1.0.0"
authors = ["rustdesk <info@rustdesk.com>"]
edition = "2018"
description = "A remote control software."

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
hbb_common = { path = "libs/hbb_common" }
tracing = "0.1"
tracing-subscriber = "0.2"
async-channel = "1.6.1"
futures = "0.3.16"
async-tungstenite = "*"



[[example]]
name = "demo1"
path = "apps/demo1.rs"

[[example]]
name = "demo2"
path = "apps/demo2.rs"

[[example]]
name = "demo3"
path = "apps/demo3.rs"

[[example]]
name = "demo4"
path = "apps/demo4.rs"

[[example]]
name = "demo5"
path = "apps/demo5.rs"

[[example]]
name = "demo6"
path = "apps/demo6.rs"


[[example]]
name = "demo7"
path = "apps/demo7.rs"

[[example]]
name = "demo8"
path = "apps/demo8.rs"


[[example]]
name = "demo9"
path = "apps/demo9.rs"

[[example]]
name = "demo10"
path = "apps/demo10.rs"

[[example]]
name = "demo11"
path = "apps/demo11.rs"


[[example]]
name = "demo12"
path = "apps/demo12.rs"


[[example]]
name = "demo13"
path = "apps/demo13.rs"