[package]
name = "rustdesk-server"
version = "1.0.0"
authors = ["rustdesk <info@rustdesk.com>"]
edition = "2018"
description = "A remote control software."

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
hbb_common = { path = "libs/hbb_common" }
tracing-appender = "0.1.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
async-channel = "1.6.1"
futures = "0.3.16"
tokio-tungstenite = "*"
url = "2.2.2"
smol = "1.2.5"
tonic = "0.5.2"
tokio-stream = "0.1.5"
prost = "0.8.0"
actix = "0.12.0"
actix-broker = "0.4.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
awc = "2.0.3"
actix-codec = "0.4.0"
bytes = "0.5.3"
lazy_static = "1.4.0"
socket2 = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dashmap = "4.0.2"


[build-dependencies]
tonic-build = "0.5.2"





[[bin]]
name = "main"
path = "src/main.rs"

#[[bin]]
#name = "server"
#path = "src/server.rs"
#
#[[bin]]
#name = "client"
#path = "src/client.rs"


[[example]]
name = "demo1"
path = "apps/demo1.rs"

[[example]]
name = "demo2"
path = "apps/demo2.rs"

[[example]]
name = "demo3"
path = "apps/demo3.rs"

[[example]]
name = "demo4"
path = "apps/demo4.rs"

[[example]]
name = "demo5"
path = "apps/demo5.rs"

[[example]]
name = "demo6"
path = "apps/demo6.rs"


[[example]]
name = "demo7"
path = "apps/demo7.rs"

[[example]]
name = "demo8"
path = "apps/demo8.rs"


[[example]]
name = "ws-server"
path = "apps/ws-server.rs"

[[example]]
name = "ws-client"
path = "apps/ws-client.rs"

[[example]]
name = "demo11"
path = "apps/demo11.rs"


[[example]]
name = "demo12"
path = "apps/demo12.rs"


[[example]]
name = "demo13"
path = "apps/demo13.rs"

[[example]]
name = "demo14"
path = "apps/demo14.rs"


[[example]]
name = "demo15"
path = "apps/demo15.rs"


[[example]]
name = "demo16"
path = "apps/proxy-client.rs"


[[example]]
name = "demo17"
path = "apps/demo17.rs"

[[example]]
name = "demo18"
path = "apps/demo18.rs"

[[example]]
name = "demo19"
path = "apps/demo19.rs"


[[example]]
name = "demo20"
path = "apps/demo20.rs"



[[example]]
name = "forward"
path = "apps/forward.rs"


[[example]]
name = "broadcast"
path = "apps/broadcast.rs"


[[example]]
name = "multicast"
path = "apps/multicast.rs"

[[example]]
name = "mult1"
path = "apps/mult1.rs"



[[example]]
name = "proxy"
path = "apps/proxy.rs"

[[example]]
name = "consumer"
path = "apps/consumer.rs"

[[example]]
name = "ws-actix-client"
path = "apps/ws-actix-client.rs"

[[example]]
name = "ws-actix-server"
path = "apps/ws-actix-server.rs"
